add jogo-forca